// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application reducer APPLICATION_DRAWER_TOGGLE reduced correctly 1`] = `
Object {
  "computerName": "",
  "deviceUserId": null,
  "docked": false,
  "drawerOpen": false,
  "launchBarCollapse": false,
  "loading": true,
  "machineId": null,
  "openfinHostSpec": Object {},
  "openfinVersion": "n/a",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [],
  "snackBarOpen": false,
  "username": "",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "normal",
}
`;

exports[`Application reducer APPLICATION_LAUNCH_BAR_TOGGLE_COLLAPSE reduced correctly - empty 1`] = `
Object {
  "computerName": "",
  "deviceUserId": null,
  "docked": false,
  "drawerOpen": true,
  "launchBarCollapse": true,
  "loading": true,
  "machineId": null,
  "openfinHostSpec": Object {},
  "openfinVersion": "n/a",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [],
  "snackBarOpen": false,
  "username": "",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "normal",
}
`;

exports[`Application reducer APPLICATION_NEW_SNACKBAR reduced correctly 1`] = `
Object {
  "computerName": "",
  "deviceUserId": null,
  "docked": false,
  "drawerOpen": true,
  "launchBarCollapse": false,
  "loading": true,
  "machineId": null,
  "openfinHostSpec": Object {},
  "openfinVersion": "n/a",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [
    Object {
      "message": "Snackbar message",
      "variant": "primary",
    },
  ],
  "snackBarOpen": false,
  "username": "",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "normal",
}
`;

exports[`Application reducer APPLICATION_PROCESS_SNACKBAR_QUEUE reduced correctly - empty 1`] = `
Object {
  "computerName": "",
  "deviceUserId": null,
  "docked": false,
  "drawerOpen": true,
  "launchBarCollapse": false,
  "loading": true,
  "machineId": null,
  "openfinHostSpec": Object {},
  "openfinVersion": "n/a",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [],
  "snackBarOpen": false,
  "username": "",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "normal",
}
`;

exports[`Application reducer APPLICATION_PROCESS_SNACKBAR_QUEUE reduced correctly - nonempty 1`] = `
Object {
  "snackBarMsgInfo": Object {
    "message": "Snackbar message",
    "variant": "primary",
  },
  "snackBarMsgQueue": Array [],
  "snackBarOpen": true,
}
`;

exports[`Application reducer APPLICATION_READY reduced correctly 1`] = `
Object {
  "computerName": "",
  "deviceUserId": null,
  "docked": false,
  "drawerOpen": true,
  "launchBarCollapse": false,
  "loading": false,
  "machineId": null,
  "openfinHostSpec": Object {},
  "openfinVersion": "n/a",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [],
  "snackBarOpen": false,
  "username": "",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "normal",
}
`;

exports[`Application reducer APPLICATION_SET_SNACKBAR_STATUS reduced correctly - empty 1`] = `
Object {
  "computerName": "",
  "deviceUserId": null,
  "docked": false,
  "drawerOpen": true,
  "launchBarCollapse": false,
  "loading": true,
  "machineId": null,
  "openfinHostSpec": Object {},
  "openfinVersion": "n/a",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [],
  "snackBarOpen": true,
  "username": "",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "normal",
}
`;

exports[`Application reducer System.actions.GET_DEVICE_USER_ID_RES reduced correctly 1`] = `
Object {
  "computerName": "",
  "deviceUserId": "id",
  "docked": false,
  "drawerOpen": true,
  "launchBarCollapse": false,
  "loading": true,
  "machineId": null,
  "openfinHostSpec": Object {},
  "openfinVersion": "n/a",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [],
  "snackBarOpen": false,
  "username": "",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "normal",
}
`;

exports[`Application reducer System.actions.GET_ENVIRONMENT_VARIABLE_RES reduced correctly - computername 1`] = `
Object {
  "computerName": "computernameVal",
  "deviceUserId": null,
  "docked": false,
  "drawerOpen": true,
  "launchBarCollapse": false,
  "loading": true,
  "machineId": null,
  "openfinHostSpec": Object {},
  "openfinVersion": "n/a",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [],
  "snackBarOpen": false,
  "username": "",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "normal",
}
`;

exports[`Application reducer System.actions.GET_ENVIRONMENT_VARIABLE_RES reduced correctly - unmatched 1`] = `
Object {
  "computerName": "",
  "deviceUserId": null,
  "docked": false,
  "drawerOpen": true,
  "launchBarCollapse": false,
  "loading": true,
  "machineId": null,
  "openfinHostSpec": Object {},
  "openfinVersion": "n/a",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [],
  "snackBarOpen": false,
  "username": "",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "normal",
}
`;

exports[`Application reducer System.actions.GET_ENVIRONMENT_VARIABLE_RES reduced correctly - username 1`] = `
Object {
  "computerName": "",
  "deviceUserId": null,
  "docked": false,
  "drawerOpen": true,
  "launchBarCollapse": false,
  "loading": true,
  "machineId": null,
  "openfinHostSpec": Object {},
  "openfinVersion": "n/a",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [],
  "snackBarOpen": false,
  "username": "usernameVal",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "normal",
}
`;

exports[`Application reducer System.actions.GET_HOST_SPECS_RES reduced correctly 1`] = `
Object {
  "computerName": "",
  "deviceUserId": null,
  "docked": false,
  "drawerOpen": true,
  "launchBarCollapse": false,
  "loading": true,
  "machineId": null,
  "openfinHostSpec": Object {
    "type": "GET_HOST_SPECS_RES",
  },
  "openfinVersion": "n/a",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [],
  "snackBarOpen": false,
  "username": "",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "normal",
}
`;

exports[`Application reducer System.actions.GET_MACHINE_ID_RES reduced correctly 1`] = `
Object {
  "computerName": "",
  "deviceUserId": null,
  "docked": false,
  "drawerOpen": true,
  "launchBarCollapse": false,
  "loading": true,
  "machineId": "id",
  "openfinHostSpec": Object {},
  "openfinVersion": "n/a",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [],
  "snackBarOpen": false,
  "username": "",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "normal",
}
`;

exports[`Application reducer System.actions.GET_VERSION_RES reduced correctly 1`] = `
Object {
  "computerName": "",
  "deviceUserId": null,
  "docked": false,
  "drawerOpen": true,
  "launchBarCollapse": false,
  "loading": true,
  "machineId": null,
  "openfinHostSpec": Object {},
  "openfinVersion": "versionStr",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [],
  "snackBarOpen": false,
  "username": "",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "normal",
}
`;

exports[`Application reducer Window.actions.GET_STATE_RES reduced correctly 1`] = `
Object {
  "computerName": "",
  "deviceUserId": null,
  "docked": false,
  "drawerOpen": true,
  "launchBarCollapse": false,
  "loading": true,
  "machineId": null,
  "openfinHostSpec": Object {},
  "openfinVersion": "n/a",
  "snackBarMsgInfo": Object {},
  "snackBarMsgQueue": Array [],
  "snackBarOpen": false,
  "username": "",
  "winHeight": 0,
  "winLeft": 0,
  "winTop": 0,
  "winWidth": 0,
  "windowsState": "windowState",
}
`;
